--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@farmfe/core": "^1.0.12",
+    "@types/node": "^20.12.4",
     "citty": "^0.1.6",
     "typescript": "^5.4.3"
   },
