--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,28 @@
 {
   "compilerOptions": {
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "target": "es2020",
+    "inlineSources": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "rootDir": "src",
     "outDir": "dist",
     "declaration": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "module": "NodeNext"
+    "resolveJsonModule": true,
+    "lib": ["ESNext", "DOM"],
+    "moduleResolution": "node",
+    "module": "esnext"
   },
   "exclude": [
     "node_modules"
   ],
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   // "references": [
   //   {
