--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "devDependencies": {
     "@farmfe/core": "^1.0.12",
+    "@farmfe/utils": "^0.0.1",
     "@types/node": "^20.12.4",
+    "@types/prompts": "^2.4.9",
     "citty": "^0.1.6",
+    "picocolors": "^1.0.0",
+    "prompts": "^2.4.2",
     "typescript": "^5.4.3"
   },
   "keywords": [],
