--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "module": "esnext"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/templates",
   ],
   "include": [
     "src/**/*.ts"
